# bilibili-video-info-mcp

./: .env.example  .gitignore  Dockerfile  README.md  README.zh.md  bilibili_api.py  mcp_server.py  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml  release.yml  test.yml
