[project.scripts]
start = "mcp_server:main"

[project]
name = "bilibili-video-info-mcp"
version = "0.1.0"
description = "An MCP server to fetch Bilibili video information like subtitles, comments, and danmaku."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.11.0",
    "requests",
]

[tool.setuptools]
py-modules = ["mcp_server", "bilibili_api"]
